fixed padding on small devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -57,7 +57,7 @@ html {
 .container {
     overflow: auto;
     max-width: 680px;
-    padding: 10px 15px;
+    padding: 0 30px;
 }
 
 .content {
